<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#350069"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity"
    android:padding="16dp">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieBreakFast"
        android:layout_marginTop="34dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="@dimen/space_34"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/break_fast_animation"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/adhanTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adhan_times"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_16"
        android:layout_marginTop="@dimen/space_16"
        android:fontFamily="@font/edu_medium"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieBreakFast" />

    <LinearLayout
        android:id="@+id/linerCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space_8"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/adhanTimes">

        <LinearLayout
        android:id="@+id/cardMorning"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="80dp"
        android:padding="@dimen/space_8"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:layout_marginEnd="@dimen/space_8">

        <TextView
        android:id="@+id/txtPrayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/morning_prayer"
        android:textSize="@dimen/text_14"
        android:textColor="@color/white" />
        <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/_4_30_am"
        android:textSize="@dimen/text_12"
        android:textColor="#90e2ddd9"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardDouher"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:padding="@dimen/space_8"
            android:orientation="vertical"
            android:background="@drawable/card"
            android:layout_marginEnd="@dimen/space_8">

            <TextView
            android:id="@+id/txtPrayerDuher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/dhuhr_prayer"
            android:textSize="@dimen/text_14"
            android:textColor="@color/white" />
            <TextView
            android:id="@+id/txtTimeDuher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/_12_20_pm"
            android:textSize="@dimen/text_12"
            android:textColor="#90e2ddd9"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardMaghrib"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:padding="@dimen/space_8"
            android:orientation="vertical"
            android:background="@drawable/card">

            <TextView
            android:id="@+id/txtPrayerMaghrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/maghrib_prayer"
            android:textSize="@dimen/text_14"
            android:textColor="@color/white" />
            <TextView
            android:id="@+id/txtTimeMaghrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/_7_20_pm"
            android:textSize="@dimen/text_12"
            android:textColor="#90e2ddd9"/>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/cardconstipationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:padding="@dimen/space_8"
            android:orientation="horizontal"
            android:background="@drawable/card"
            app:layout_constraintTop_toBottomOf="@id/linerCards"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible">

            <TextView
            android:id="@+id/txtConstipation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/constipation_time"
            android:textSize="@dimen/text_14"
            android:textColor="@color/white" />

            <TextView
            android:id="@+id/txtConTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/_4h_26m_22s"
            android:textSize="@dimen/text_14"
            android:textColor="#90FFFFFF" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/cardIfarTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_8"
        android:orientation="horizontal"
        android:background="@drawable/card"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/cardconstipationTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtIftarTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/the_remaining_time_for_iftar"
            android:textSize="@dimen/text_14"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/timeIftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/_16h_44m_54s"
            android:textSize="@dimen/text_14"
            android:textColor="#90FFFFFF" />
    </LinearLayout>




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ramadan" />


    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/welcomeString"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_26"
        android:fontFamily="@font/edu_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img" />

</androidx.constraintlayout.motion.widget.MotionLayout>